--- a/app/views/customers/orders/_cart.html.erb
+++ b/app/views/customers/orders/_cart.html.erb
@@ -2,9 +2,9 @@
 <%#= @order.order_items.class %>
 <% @order.order_items.order(created_at: :asc).each do |oi| %>
   <tr>
-    <td><%= button_to "+", customers_order_path(@order), method: :patch, remote: true, params: { func: "add", order_item_id: oi.id } %>
+    <td><%= button_to "+", customers_order_path(@order), method: :patch, remote: true, params: { func: "add", order_item_id: oi.id }, class: "btn btn-blue" %>
     </td>
-    <td><%= button_to "-", customers_order_path(@order), method: :patch, remote: true, params: { func: "sub", order_item_id: oi.id } %> </td>
+    <td><%= button_to "-", customers_order_path(@order), method: :patch, remote: true, params: { func: "sub", order_item_id: oi.id }, class: "btn btn-blue" %> </td>
     <td><%= oi.quantity %> x </td>
     <% if oi.variation.present? %>
       <td><%= "#{oi.name} - #{oi.variation.name}"%></td>
@@ -26,14 +26,14 @@
     <% else %>
       <td><%= oi.price * oi.quantity %> </td>
     <% end %>
-    <td><%= button_to "x", delete_cart_row_customers_order_path(@order), method: :delete, remote: true, params: {order_item_id: oi.id } %> </td>
+    <td><%= button_to "x", delete_cart_row_customers_order_path(@order), method: :delete, remote: true, params: {order_item_id: oi.id }, class: "btn btn-blue" %> </td>
     
   </tr>
 <% end %>
 </table>
 
-<div><%= button_to "Delete All", customers_order_path(@order), method: :delete, remote: true, data: {confirm: "Are you sure to clear cart?"} %> </div>
+<div><%= button_to "Delete All", customers_order_path(@order), method: :delete, remote: true, data: {confirm: "Are you sure to clear cart?"}, class: "btn btn-blue z-30" %> </div>
 
 <div class ="checkout" >
-  <%= button_to "Checkout", checkout_customers_order_path(@order), method: :patch %>
+  <%= button_to "Checkout", checkout_customers_order_path(@order), method: :patch, class: "btn btn-blue" %>
 </div>
